--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <title>Mospan V. Veterinarian.</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-</head>
+<link rel="stylesheet" href="css/index.css">
+    </head>
 <body>
     <header>
+        <div class="hat">
         <p>Години роботи: 9:00 - 18:00</p>
         <p>+38 095 032 84 57</p>
         <p>sedoborodui@gmail.com</p>
+        </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">Володимир Моспан</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -54,15 +57,20 @@
     </nav>
     </header>
 <div class="bunner">
+    <div class="bunner-text">
     <h1>Володимир Моспан, <br>Ветеринар</h1>
     <p>Лікар ветеринарної медицини.<br>
     Допоможу вирішити будь які проблеми зі здоров'ям вашого улюбленця!</p>
     <button>Звернутися за допомогою</button>
+    </div>
 </div>
+<div class="about-me-info">
+    <div class="about-me">
+<img src="img/graduation.jpg" alt="університетський випуск">
+    </div>
 <div class="aboutInfo">
-    <img src="img/graduation.jpg" alt="університетський випуск">
-    <h2>Про лікаря Моспан В.Я.</h2>
-    <p>Володимир спеціалізується на лікуванні дрібних домашніх тварин, корекції харчування, стерилізації.</p>
+     <h2>Про лікаря Моспан В.Я.</h2>
+    <p class="subtitle">Володимир спеціалізується на лікуванні дрібних домашніх тварин, корекції харчування, стерилізації.</p>
     <p>Навчався у Львівському національному університеті ветеринарної медицини та біотехнологій імені С.З. Гжицького, який
     успішно закінчив у 2018 році здобувши кваліфікацію магістра за спеціальністю "Ветеринарна медицина".
     
@@ -70,33 +78,48 @@
     інтенсивна терапія.
 </p>
 </div>
+</div>
 <div class="consultation">
-    <h2>Переваги професійної ветеринарної консультації</h2>
+     <h2>Переваги професійної ветеринарної консультації</h2>
     <hr>
+    <div class="advantages">
     <div class="help">
         <img src="img/ico_help.png" alt="іконка допомога">
-    <p>Оперативна медична допомога</p>
+    <p>Оперативна медична<br>допомога</p>
     </div>
     <div class="prof">
     <img src="img/ico_prof.png" alt="іконка профілактика">
-    <p>Профілактика захворювань</p>
+    <p>Профілактика <br>захворювань</p>
     </div>
     <div class="time">
     <img src="img/ico_time.png" alt="іконка годинник">
-    <p>Збережений час у майбутньому</p>
+    <p>Збережений час у<br>майбутньому</p>
+    </div>
     </div>
 </div>
 <div class="first_cons">
     <h2>Перша консультація у лікаря Моспан В.Я.</h2>
     <hr>
-    <img src="img/pet.jpg" alt="цуценя, кролик та кошеня дивляться в камеру">
+    <div class="backgr">
+        <p>Маєш запитання?</p>
+    </div>
+    <!-- <img src="img/pet.jpg" alt="цуценя, кролик та кошеня дивляться в камеру"> -->
 </div>
 <div class="cons-process">
     <h2>Процес ветеринарної консультації</h2>
     <p>Як відбувається перша консультація?</p>
+    <div class="img-carousel">
+    <div class="ico-cont">
+        <img src="img/ico_carousel.png" alt="icon">
+        <img src="img/ico_carousel.png" alt="icon">
+        <img src="img/ico_carousel.png" alt="icon">
+    </div>
+    <div class="image-cont">
     <img src="img/phone_to_vet.jpg" alt="собака на плечі у господаря">
-    <img src="img/questions.jpg" alt="кішка в окулярах читає книгу">
-    <img src="img/fin_plan.jpg" alt="собака в медичній масці">
+    <!-- <img src="img/questions.jpg" alt="кішка в окулярах читає книгу">
+    <img src="img/fin_plan.jpg" alt="собака в медичній масці"> -->
+    </div>
+</div>
 </div>
 <div class="before-after">
     <h2>Що робити перед консультацією та після неї</h2>
@@ -120,7 +143,7 @@
 
 
 
-
+<script src="js/index.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
