--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
     <p>Як відбувається перша консультація?</p>
     <div class="img-carousel">
     <div class="ico-cont">
-        <img src="img/ico_carousel.png" alt="icon">
-        <img src="img/ico_carousel.png" alt="icon">
-        <img src="img/ico_carousel.png" alt="icon">
+        <img class="ico1" src="img/ico_carousel.png" alt="icon">
+        <img class ="ico2" src="img/ico_carousel.png" alt="icon">
+        <img class="ico3" src="img/ico_carousel.png" alt="icon">
     </div>
     <div class="image-cont">
     <img src="img/phone_to_vet.jpg" alt="собака на плечі у господаря">
@@ -124,22 +124,59 @@
 <div class="before-after">
     <h2>Що робити перед консультацією та після неї</h2>
     <hr>
+    <div class="image-container">
     <img src="img/before.jpg" alt="собака">
     <img src="img/after.jpg" alt="кішка">
+    </div>
+
 </div>
 <div class="services">
+    <div class="services-title">
     <h2>Додаткові послуги</h2>
     <hr>
+    </div>
+    <div class="services-images">
+    <div>
 <img src="img/doggy.jpg" alt="собака в лікаря на руках">
 <p>Стерилізація</p>
+</div>
+<div>
 <img src="img/dog.jpg" alt="собака на операційному столі">
 <p>Візуальна діагностика</p>
-<img src="img/sick_dog.jpg" alt="собака з забинтованою лапою">
+</div>
+<div>
+    <img src="img/sick_dog.jpg" alt="собака з забинтованою лапою">
 <p>Обробка рани</p>
+</div>
+<div>
 <img src="img/dog_close_eye.jpg" alt="собака закрив око лапою">
 <p>Вакцинація</p>
 </div>
+</div>
+</div>
+<div class="responces">
+    <h2>Відгуки</h2>
+    <hr>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="img/resp1.png" class="d-block w-100" alt="відгук">
+        </div>
+        <div class="carousel-item">
+            <img src="img/resp2.png" class="d-block w-100" alt="відгук">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
 
+</div>
 
 
 
