--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Mospan V. Veterinarian.</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/index.css" />
+    >
+    <link rel="stylesheet" href="css/index.css" >
   </head>
   <body>
     <header>
@@ -48,12 +48,11 @@
                 Про лікаря Моспан В.Я.
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#"
+                <a class="dropdown-item" href="#why-me"
                   >Чому варто обрати Володимира</a
                 >
-                <a class="dropdown-item" href="#">Освіта</a>
-                <a class="dropdown-item" href="#">Досягнення</a>
-              </div>
+                <a class="dropdown-item" href="#about-me-info">Освіта</a>
+               </div>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -68,16 +67,16 @@
                 Про Консультацію
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Опис</a>
-                <a class="dropdown-item" href="#">Процес</a>
-                <a class="dropdown-item" href="#">Деталі</a>
+                <a class="dropdown-item" href="#consultation">Опис</a>
+                <a class="dropdown-item" href="#cons-process">Процес</a>
+                <a class="dropdown-item" href="#before-after">Деталі</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Послуги</a>
+              <a class="nav-link" href="#services">Послуги</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Контакти</a>
+              <a class="nav-link" href="#my-form">Контакти</a>
             </li>
           </ul>
         </div>
@@ -86,17 +85,17 @@
     <main>
       <div class="bunner">
         <div class="bunner-text">
-          <h1>Володимир Моспан, <br />Ветеринар</h1>
+          <h1>Володимир Моспан, <br >Ветеринар</h1>
           <p>
-            Лікар ветеринарної медицини.<br />
+            Лікар ветеринарної медицини.<br >
             Допоможу вирішити будь які проблеми зі здоров'ям вашого улюбленця!
           </p>
           <button>Звернутися за допомогою</button>
         </div>
       </div>
-      <div class="about-me-info">
+      <div id="about-me-info">
         <div class="about-me">
-          <img src="img/graduation.jpg" alt="університетський випуск" />
+          <img src="img/graduation.jpg" alt="університетський випуск" >
         </div>
         <div class="aboutInfo">
           <h2>Про лікаря Моспан В.Я.</h2>
@@ -114,87 +113,85 @@
           </p>
         </div>
       </div>
-      <div class="consultation">
+      <div id="consultation">
         <h2>Переваги професійної ветеринарної консультації</h2>
-        <hr />
+        <hr >
         <div class="advantages">
           <div class="help">
-            <img src="img/ico_help.png" alt="іконка допомога" />
-            <p>Оперативна медична<br />допомога</p>
+            <img src="img/ico_help.png" alt="іконка допомога" >
+            <p>Оперативна медична<br >допомога</p>
           </div>
           <div class="prof">
-            <img src="img/ico_prof.png" alt="іконка профілактика" />
-            <p>Профілактика <br />захворювань</p>
+            <img src="img/ico_prof.png" alt="іконка профілактика" >
+            <p>Профілактика <br >захворювань</p>
           </div>
           <div class="time">
-            <img src="img/ico_time.png" alt="іконка годинник" />
-            <p>Збережений час у<br />майбутньому</p>
+            <img src="img/ico_time.png" alt="іконка годинник" >
+            <p>Збережений час у<br >майбутньому</p>
           </div>
         </div>
       </div>
       <div class="first_cons">
         <h2>Перша консультація у лікаря Моспан В.Я.</h2>
-        <hr />
+        <hr >
         <img
           src="img/pet.jpg"
           alt="цуценя, кролик та кошеня дивляться в камеру"
-        />
+        >
       </div>
-      <div class="cons-process">
+      <div id="cons-process">
         <h2>Процес ветеринарної консультації</h2>
         <p>Як відбувається перша консультація?</p>
         <div class="img-carousel">
           <div class="ico-cont">
-            <img class="ico1" src="img/ico_carousel.png" alt="icon" />
-            <img class="ico2" src="img/ico_carousel.png" alt="icon" />
-            <img class="ico3" src="img/ico_carousel.png" alt="icon" />
+            <img class="ico1" src="img/ico_carousel.png" alt="icon" >
+            <img class="ico2" src="img/ico_carousel.png" alt="icon" >
+            <img class="ico3" src="img/ico_carousel.png" alt="icon" >
           </div>
           <div class="image-cont">
-            <img src="img/phone_to_vet.jpg" alt="собака на плечі у господаря" />
-            <!-- <img src="img/questions.jpg" alt="кішка в окулярах читає книгу">
-    <img src="img/fin_plan.jpg" alt="собака в медичній масці"> -->
+            <img src="img/phone_to_vet.jpg" alt="собака на плечі у господаря" >
           </div>
         </div>
       </div>
-      <div class="before-after">
+      <div id="before-after">
         <h2>Що робити перед консультацією та після неї</h2>
-        <hr />
+        <hr >
         <div class="image-container">
-          <img src="img/before.jpg" alt="собака" />
-          <img src="img/after.jpg" alt="кішка" />
+          <img src="img/before.jpg" alt="собака" >
+          <img src="img/after.jpg" alt="кішка" >
         </div>
       </div>
-      <div class="services">
+      <div id="services">
         <div class="services-title">
           <h2>Додаткові послуги</h2>
-          <hr />
+          <hr >
         </div>
         <div class="services-images">
           <div>
-            <img src="img/doggy.jpg" alt="собака в лікаря на руках" />
+            <img src="img/doggy.jpg" alt="собака в лікаря на руках" >
             <p>Стерилізація</p>
           </div>
           <div>
-            <img src="img/dog.jpg" alt="собака на операційному столі" />
+            <img src="img/dog.jpg" alt="собака на операційному столі" >
             <p>Візуальна діагностика</p>
           </div>
           <div>
-            <img src="img/sick_dog.jpg" alt="собака з забинтованою лапою" />
+            <img src="img/sick_dog.jpg" alt="собака з забинтованою лапою" >
             <p>Обробка рани</p>
           </div>
           <div>
-            <img src="img/dog_close_eye.jpg" alt="собака закрив око лапою" />
+            <img src="img/dog_close_eye.jpg" alt="собака закрив око лапою" >
             <p>Вакцинація</p>
           </div>
         </div>
       </div>
       <div class="responces">
         <h2>Відгуки</h2>
-        <hr />
+        <hr >
         <div id="carouselControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/resp1.jpg" class="d-block w-100" alt="відгук" />
+              <img src="img/resp1.jpg" class="d-block w-100" alt="відгук" >
               <h3>Тетяна Н.</h3>
               <p>
                 "Лікар дуже професійно виконав всі маніпуляції. Ми з собанькою
@@ -203,7 +200,7 @@
               <p class="date">Квітень, 2019</p>
             </div>
             <div class="carousel-item">
-              <img src="img/resp2.jpg" class="d-block w-100" alt="відгук" />
+              <img src="img/resp2.jpg" class="d-block w-100" alt="відгук" >
               <h3>Руслан</h3>
               <p>
                 "Звертався за допомогою моїй кішці, все сподобалося. Володимир
@@ -235,7 +232,7 @@
       <div class="form-container">
         <div class="form-consultation">
           <h2>Хочете запланувати свою першу консультацію?</h2>
-          <hr />
+          <hr >
           <p>
             Скористайтеся цією формою, щоб забронювати зустріч і запланувати
             свою першу консультацію!
@@ -248,7 +245,7 @@
             method="POST"
           >
             <label for="name"></label>
-            <input type="text" name="name" id="name" value="Ім'я:" />
+            <input type="text" name="name" id="name" value="Ім'я:" >
             <label for="phone"></label>
             <input
               type="tel"
@@ -256,20 +253,20 @@
               id="phone"
               pattern="[+]{1}[0-9]{12}"
               value="Номер телефону:  +380"
-            />
+            >
             <label for="date">Бажана дата прийому:</label>
-            <input type="date" name="date" id="date" />
-            <button id="my-form-button">Відправити</button><br />
+            <input type="date" name="date" id="date" >
+            <button id="my-form-button">Відправити</button><br >
             <p id="my-form-status"></p>
           </form>
         </div>
       </div>
-      <div class="why-me">
+      <div id="why-me">
         <h2>Чому варто обрати Моспан В.Я?</h2>
-        <hr />
+        <hr >
         <div class="why-me-grid">
           <div class="why-me-img">
-            <img src="img/why-me.jpg" alt="Ветеринар з єнотом на плечі" />
+            <img src="img/why-me.jpg" alt="Ветеринар з єнотом на плечі" >
           </div>
           <div class="why-me-info">
             <ul>
@@ -288,27 +285,27 @@
       </div>
       <div class="my-clinic">
         <h2>Клініка, в якій працює Володимир</h2>
-        <hr />
+        <hr >
         <div class="clinic-image-container">
           <div>
-            <img src="img/olVet1.jpg" alt="Стаціонар клініки ОлВет" />
+            <img src="img/olVet1.jpg" alt="Стаціонар клініки ОлВет" >
           </div>
           <div>
-            <img src="img/olVet2.jpeg" alt="Хірургічний стіл клініки ОлВет" />
+            <img src="img/olVet2.jpeg" alt="Хірургічний стіл клініки ОлВет" >
             <p>ОлВет</p>
           </div>
           <div>
-            <img src="img/olVet3.jpg" alt="Обладнання клініки ОлВет" />
+            <img src="img/olVet3.jpg" alt="Обладнання клініки ОлВет" >
             <p>м. Івано-Франківськ</p>
           </div>
           <div>
-            <img src="img/olVet4.jpg" alt="Узд у  клініці ОлВет" />
+            <img src="img/olVet4.jpg" alt="Узд у  клініці ОлВет" >
           </div>
         </div>
       </div>
       <div class="useful-tips">
         <h2>Корисні поради, для власників домашніх улюбленців</h2>
-        <hr />
+        <hr >
         <p>
           Якщо ви хочете завести собі домашнього улюбленця, то перш за все
           необхідно визначитися з породою і довідатися як за цією породою
@@ -383,6 +380,7 @@
       </div>
     </main>
     <footer>
+      <div class="footer-info">
       <div class="footer-text">
           <div class="footer-name">
         <h2>Володимир Моспан</h2>
@@ -391,26 +389,25 @@
          
       </div>
       <div class="footer-links">
-          <div class="links">
         <h2>Follow Me</h2>
         <div class="icons">
           <a
             class="nav-item nav-link"
             href="https://www.facebook.com/profile.php?id=100006204887078"
             ><img src="img/facebook.png" alt="facebook"
-          /></a>
+          ></a>
 
           <a
             class="nav-item nav-link"
             href="https://www.instagram.com/vovchik_mospan"
             ><img src="img/instagram.png" alt="instagram"
-          /></a>
-        </div>
+          ></a>
           </div>
-          <div class="rights">
-            <p>© Created by Svitlana Petrytska</p>
+       </div>  
+      </div>
+      <div class="rights">
+        <p>© Created by Svitlana Petrytska</p>
         <p>All righth Reserved</p>
-        </div>
       </div>
     </footer>
 
