--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           </div>
           <div>
             <img src="img/dog_close_eye.jpg" alt="собака закрив око лапою" >
-            <p>Вакцинація</p>
+            <p>Медикаментозне лікування</p>
           </div>
         </div>
       </div>
@@ -231,7 +231,7 @@
               <img src="img/resp1.jpg" class="d-block w-100" alt="відгук" >
               <h3>Тетяна Н.</h3>
               <p>
-                "Лікар дуже професійно виконав всі маніпуляції. Ми з собанькою
+                "Лікар дуже професійно виконав всі маніпуляції. Ми з собачкою
                 задоволені, будемо рекомендувати друзям!"
               </p>
               <p class="date">Квітень, 2019</p>
@@ -278,7 +278,7 @@
         <div class="my-form">
           <form
             id="my-form"
-            action="https://formspree.io/mjvareav"
+            action="https://formspree.io/xaypbbyg"
             method="POST"
           >
             <label for="name"></label>
@@ -293,6 +293,8 @@
             >
             <label for="date">Бажана дата прийому:</label>
             <input type="date" name="date" id="date" >
+            <label for="email"></label>
+            <input type="email" name="email" id="email" value="Ваша електронна адреса:">
             <button id="my-form-button">Відправити</button><br >
             <p id="my-form-status"></p>
           </form>
@@ -325,20 +327,19 @@
         <hr >
         <div class="clinic-image-container">
           <div>
-            <img src="img/olVet1.jpg" alt="Стаціонар клініки ОлВет" >
+            <img src="img/olVet1.jpg" alt="Стаціонар клініки ОлВет" >           
           </div>
           <div>
-            <img src="img/olVet2.jpeg" alt="Хірургічний стіл клініки ОлВет" >
-            <p>ОлВет</p>
+            <img src="img/olVet2.jpeg" alt="Хірургічний стіл клініки ОлВет" >            
           </div>
           <div>
             <img src="img/olVet3.jpg" alt="Обладнання клініки ОлВет" >
-            <p>м. Івано-Франківськ</p>
           </div>
           <div>
-            <img src="img/olVet4.jpg" alt="Узд у  клініці ОлВет" >
+            <img src="img/olVet4.jpg" alt="Узд у  клініці ОлВет" >          
           </div>
         </div>
+        <p>"ОлВет" м. Івано-Франківськ</p>
       </div>
       <div class="useful-tips">
         <h2>Корисні поради, для власників домашніх улюбленців</h2>
