--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  <form action="https://formspree.io/mjvareav" method="POST" id="formModal">
+                  <form action="https://formspree.io/xaypbbyg" method="POST" id="formModal">
                     <div class="form-group">
                       <label for="recipient-name" class="col-form-label">Ім'я:</label>
                       <input type="text" class="form-control" id="recipient-name" name="name">
@@ -118,10 +118,10 @@
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Опишіть проблему зі здоров'ям:</label>
                       <textarea class="form-control" id="message-text" name="text"></textarea>
-                    </div>
-                    <p id="statusModal"></p>             
-                   <button id="buttonModal" type="button" class="btn btn-secondary" data-dismiss="modal">Відправити</button>
-                   </form>
+                    </div>                            
+                   <button id="buttonModal" type="submit" class="btn btn-secondary" >Відправити</button>
+                  <p id="statusModal"></p>
+                  </form>
                   </div>
                
               </div>
