--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     >
     <link rel="stylesheet" href="css/index.css" >
+    <link rel="shortcut icon" href="img/dog_close_eye.jpg" type="image/jpg"> 
   </head>
   <body>
     <header>
